# polygot-parser

./: .gitignore  CMakeLists.txt  README.md  test.c
adapters/: adapters.c  adapters.h  js_adapter.c  python_adapter.c  ruby_adapter.c
examples/: example.js  example.py  example.rb
exporter/: mc_export.c  mc_export.h
graph/: graph.c  graph.h
ir/: ir.c  ir.h
src/: main.c  parser.c  parser.h
tests/integration/: test_cli.c
tests/unit/: test_adapters.c  test_exporter.c  test_graph.c  test_parser.c
